--- a/package.json
+++ b/package.json
@@ -14,6 +14,17 @@
     "react-router-dom": "^4.3.1",
     "react-text-mask": "^5.1.0"
   },
+  "dependencies": {
+    "@material-ui/core": "^1.2.1",
+    "classnames": "^2.2.6",
+    "moment": "^2.20.1",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-redux": "5.0.5",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-text-mask": "^5.1.0"
+  },
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --config conf/webpack.start.js --hot --port 3333",
