--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.2.1",
+    "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "moment": "^2.20.1",
     "react": "^16.4.1",
@@ -34,7 +35,7 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.10",
-    "@types/react": "^16.3.9",
+    "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.5",
     "@types/react-redux": "^5.0.16",
     "chai": "^4.1.2",
