--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "skipLibCheck": true,
+    "experimentalDecorators": true,
     "module": "commonjs",
     "lib": [
       "es2015",
