--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.20.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-progress-bar-plus": "^1.3.1",
     "react-redux": "5.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
