--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^5.0.0",
     "react-scripts-ts": "^2.16.0",
     "react-test-renderer": "^16.4.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.6",
