--- a/package.json
+++ b/package.json
@@ -16,57 +16,73 @@
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "moment": "^2.20.1",
+    "prismjs": "^1.15.0",
     "react": "16.7.0-alpha.0",
     "react-dom": "16.7.0-alpha.0",
     "react-progress-bar-plus": "^1.3.1",
     "react-redux": "5.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-text-mask": "^5.1.0"
+    "react-text-mask": "^5.1.0",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server --config conf/webpack.start.js --hot --port 3335",
-    "build": "rimraf dist && webpack --config conf/webpack.build.js --progress --profile --bail",
-    "compile": "webpack --config conf/webpack.compile.js"
+    "compile": "webpack --config conf/webpack.compile.js",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
   },
   "author": {
     "name": "Alexandre Annic",
     "email": "alexandre.annic1@gmail.com"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.10",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.5",
-    "@types/react-redux": "^5.0.16",
-    "chai": "^4.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/enzyme": "^3.1.15",
+    "@types/react": "^16.7.6",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^5.0.21",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-preval": "^3.0.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2017": "^6.24.1",
+    "chai": "^4.2.0",
     "chai-enzyme": "^0.8.0",
-    "css-loader": "^0.28.9",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "css-loader": "^1.0.1",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^4.19.1",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.9.1",
-    "html-webpack-plugin": "^2.30.1",
+    "eslint-plugin-react": "^7.11.1",
+    "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.1.0",
-    "node-sass": "^4.9.0",
+    "jest": "^23.6.0",
+    "prettier": "1.15.2",
     "react-addons-test-utils": "^15.6.2",
-    "react-dev-utils": "^5.0.0",
-    "react-scripts-ts": "^2.16.0",
-    "react-test-renderer": "^16.4.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.6",
-    "source-map-loader": "^0.2.3",
+    "react-dev-utils": "^5.0.3",
+    "react-test-renderer": "^16.6.3",
+    "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-jest": "^22.4.6",
     "ts-loader": "3.5.0",
-    "typescript": "^2.8.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.11.2",
-    "webpack-merge": "^4.1.2"
+    "typescript": "^2.9.2",
+    "webpack": "^4.26.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   }
 }
