import from 'mui-extension'

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-text-mask": "^5.1.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "mui-extension": "git+https://github.com/alexandreannic/mui-extension.git"
   },
   "scripts": {
     "test": "jest",
