--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-text-mask": "^5.1.0",
-    "@material-ui/core": "3.5.1"
+    "@material-ui/core": "3.8.3"
   },
   "dependencies": {
-    "@material-ui/core": "3.5.1",
+    "@material-ui/core": "3.8.3",
+    "@material-ui/styles": "^3.0.0-alpha.8",
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "moment": "^2.20.1",
+    "mui-extension": "git+https://github.com/alexandreannic/mui-extension.git",
     "prismjs": "^1.15.0",
     "react": "16.7.0-alpha.0",
     "react-dom": "16.7.0-alpha.0",
@@ -24,8 +26,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-text-mask": "^5.1.0",
-    "style-loader": "^0.23.1",
-    "mui-extension": "git+https://github.com/alexandreannic/mui-extension.git"
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "test": "jest",
