--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,12 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "module": "commonjs",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "noEmit": true,
     "lib": [
       "es2015",
       "es2017",
