--- a/doc/package.json
+++ b/doc/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "mui-extension",
+  "name": "mui-extension-doc",
   "version": "0.0.1",
   "description": "Bunch of components often used in Particeep applications",
   "main": "lib/index.js",
-  "peerDependencies": {
-    "classnames": "^2.2.6",
-    "moment": "^2.20.1",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-text-mask": "^5.1.0",
-    "@material-ui/core": "^3.9.2"
-  },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.20.1",
-    "mui-extension": "git+https://github.com/alexandreannic/mui-extension.git",
+    "mui-extension": "1.0.0",
     "prismjs": "^1.15.0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-text-mask": "^5.1.0",
@@ -26,7 +21,6 @@
   },
   "scripts": {
     "test": "jest",
-    "compile": "tsc",
     "start": "webpack-dev-server --config webpack.start.js --mode development --open --hot",
     "build": "webpack --config webpack.build.js -p"
   },
