--- a/package.json
+++ b/package.json
@@ -24,27 +24,11 @@
   },
   "author": "Alexandre Annic <alexandre.annic1@gmail.com>",
   "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
     "@types/enzyme": "^3.1.15",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-preval": "^3.0.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2017": "^6.24.1",
     "chai": "^4.2.0",
     "chai-enzyme": "^0.8.0",
-    "css-loader": "^2.1.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
@@ -54,23 +38,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "prettier": "1.15.2",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dev-utils": "^5.0.3",
-    "react-test-renderer": "^16.6.3",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^22.4.6",
-    "ts-loader": "3.5.0",
-    "typescript": "^2.9.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "typescript": "^2.9.2"
   },
   "directories": {
     "lib": "lib"
