--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@material-ui/core": "^3.9.2"
   },
   "dependencies": {
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/styles": "v3.0.0-alpha.10",
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
