Documentation lifting + Minor improvements

--- a/doc/tsconfig.json
+++ b/doc/tsconfig.json
@@ -10,6 +10,7 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "lib": [
       "es2015",
       "es2017",
