--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "peerDependencies": {
     "react": "16.8.2",
     "react-dom": "16.8.2",
-    "@material-ui/styles": "4.0.2",
-    "@material-ui/core": "4.0.2"
+    "@material-ui/styles": "4.9.6",
+    "@material-ui/core": "4.9.9",
+    "@material-ui/lab": "4.0.0-alpha.48"
   },
   "dependencies": {
     "autobind-decorator": "^2.1.0",
@@ -26,8 +27,9 @@
   "devDependencies": {
     "react": "16.8.2",
     "react-dom": "16.8.2",
-    "@material-ui/styles": "4.0.2",
-    "@material-ui/core": "4.0.2",
+    "@material-ui/lab": "4.0.0-alpha.48",
+    "@material-ui/styles": "4.9.6",
+    "@material-ui/core": "4.9.9",
     "@types/enzyme": "^3.1.15",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
