--- a/doc/package.json
+++ b/doc/package.json
@@ -1,28 +1,29 @@
 {
   "name": "mui-extension-doc",
   "version": "0.0.1",
-  "description": "Bunch of components",
+  "description": "Documentation and examples for mui-extension library",
   "main": "lib/index.js",
   "dependencies": {
-    "@material-ui/core": "4.9.9",
-    "@material-ui/styles": "4.9.6",
+    "@material-ui/core": "4.11.3",
+    "@material-ui/styles": "4.11.3",
     "autobind-decorator": "^2.1.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.20.1",
     "mui-extension": "1.7.0",
     "prismjs": "^1.15.0",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-text-mask": "^5.1.0",
     "react-transition-group": "^2.5.3"
   },
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --config webpack.start.js --mode development --open --hot",
-    "build": "webpack --config webpack.build.js -p"
+    "build": "webpack --config webpack.build.js -p",
+    "deploy": "firebase deploy"
   },
   "author": {
     "name": "Alexandre Annic",
@@ -39,8 +40,8 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@types/enzyme": "^3.1.15",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-preval": "^3.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
