--- a/doc/package.json
+++ b/doc/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "mui-extension-doc",
-  "version": "0.0.1",
-  "description": "Documentation and examples for mui-extension library",
-  "main": "lib/index.js",
+  "name": "doc",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/styles": "4.11.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.7",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "autobind-decorator": "^2.1.0",
+    "babel-plugin-preval": "^5.0.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.20.1",
@@ -14,62 +21,39 @@
     "prismjs": "^1.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "react-text-mask": "^5.1.0",
-    "react-transition-group": "^2.5.3"
+    "react-transition-group": "^2.5.3",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "test": "jest",
-    "start": "webpack-dev-server --config webpack.start.js --mode development --open --hot",
-    "build": "webpack --config webpack.build.js -p",
-    "deploy": "firebase deploy"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "author": {
-    "name": "Alexandre Annic",
-    "email": "alexandre.annic1@gmail.com"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@types/enzyme": "^3.1.15",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "babel-loader": "^8.0.4",
-    "babel-plugin-preval": "^3.0.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2017": "^6.24.1",
-    "chai": "^4.2.0",
-    "chai-enzyme": "^0.8.0",
-    "css-loader": "^2.1.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
-    "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "prettier": "1.15.2",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dev-utils": "^5.0.3",
-    "react-test-renderer": "^16.6.3",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^22.4.6",
-    "ts-loader": "3.5.0",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.26.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
