--- a/doc/package.json
+++ b/doc/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "dev": "npm link mui-extension && npm link ../node_modules/react && npm run start",
+    "dev": "npm link mui-extension && npm link ../node_modules/@material-ui/core && npm link ../node_modules/react && npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
