--- a/doc/package.json
+++ b/doc/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.20.1",
-    "mui-extension": "1.7.0",
+    "mui-extension": "2.0.0",
     "prismjs": "^1.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": [
